parser.out
Grammar:

Rule 0     S' -> prog
Rule 1     prog -> listeInstructions
Rule 2     listeInstructions -> instruction listeInstructions
Rule 3     listeInstructions -> instruction
Rule 4     instruction -> ecrire
Rule 5     ecrire -> ECRIRE ( expr ) ;
Rule 6     facteur -> ENTIER
Rule 7     facteur -> ( expr )
Rule 8     produit -> produit % facteur
Rule 9     produit -> produit / facteur
Rule 10    produit -> produit * facteur
Rule 11    produit -> facteur
Rule 12    expr -> - facteur
Rule 13    expr -> expr - produit
Rule 14    expr -> expr + produit
Rule 15    expr -> produit

Unused terminals:

    NON
    INFERIEUR_OU_EGAL
    ET
    TANT_QUE
    LIRE
    BOOLEEN
    OU
    FAUX
    IDENTIFIANT
    VRAI
    SINON
    RETOURNER
    EGAL
    SI
    SUPERIEUR_OU_EGAL
    NON_EGAL

Terminals, with rules where they appear:

%                    : 8
(                    : 5 7
)                    : 5 7
*                    : 10
+                    : 14
-                    : 12 13
/                    : 9
;                    : 5
BOOLEEN              : 
ECRIRE               : 5
EGAL                 : 
ENTIER               : 6
ET                   : 
FAUX                 : 
IDENTIFIANT          : 
INFERIEUR_OU_EGAL    : 
LIRE                 : 
NON                  : 
NON_EGAL             : 
OU                   : 
RETOURNER            : 
SI                   : 
SINON                : 
SUPERIEUR_OU_EGAL    : 
TANT_QUE             : 
VRAI                 : 
error                : 

Nonterminals, with rules where they appear:

ecrire               : 4
expr                 : 5 7 13 14
facteur              : 8 9 10 11 12
instruction          : 2 3
listeInstructions    : 1 2
produit              : 8 9 10 13 14 15
prog                 : 0


state 0

    (0) S' -> . prog
    (1) prog -> . listeInstructions
    (2) listeInstructions -> . instruction listeInstructions
    (3) listeInstructions -> . instruction
    (4) instruction -> . ecrire
    (5) ecrire -> . ECRIRE ( expr ) ;
    ECRIRE          shift and go to state 5

    prog                           shift and go to state 1
    listeInstructions              shift and go to state 2
    instruction                    shift and go to state 3
    ecrire                         shift and go to state 4

state 1

    (0) S' -> prog .


state 2

    (1) prog -> listeInstructions .
    $end            reduce using rule 1 (prog -> listeInstructions .)


state 3

    (2) listeInstructions -> instruction . listeInstructions
    (3) listeInstructions -> instruction .
    (2) listeInstructions -> . instruction listeInstructions
    (3) listeInstructions -> . instruction
    (4) instruction -> . ecrire
    (5) ecrire -> . ECRIRE ( expr ) ;
    $end            reduce using rule 3 (listeInstructions -> instruction .)
    ECRIRE          shift and go to state 5

    instruction                    shift and go to state 3
    listeInstructions              shift and go to state 6
    ecrire                         shift and go to state 4

state 4

    (4) instruction -> ecrire .
    ECRIRE          reduce using rule 4 (instruction -> ecrire .)
    $end            reduce using rule 4 (instruction -> ecrire .)


state 5

    (5) ecrire -> ECRIRE . ( expr ) ;
    (               shift and go to state 7


state 6

    (2) listeInstructions -> instruction listeInstructions .
    $end            reduce using rule 2 (listeInstructions -> instruction listeInstructions .)


state 7

    (5) ecrire -> ECRIRE ( . expr ) ;
    (12) expr -> . - facteur
    (13) expr -> . expr - produit
    (14) expr -> . expr + produit
    (15) expr -> . produit
    (8) produit -> . produit % facteur
    (9) produit -> . produit / facteur
    (10) produit -> . produit * facteur
    (11) produit -> . facteur
    (6) facteur -> . ENTIER
    (7) facteur -> . ( expr )
    -               shift and go to state 10
    ENTIER          shift and go to state 13
    (               shift and go to state 8

    expr                           shift and go to state 9
    facteur                        shift and go to state 11
    produit                        shift and go to state 12

state 8

    (7) facteur -> ( . expr )
    (12) expr -> . - facteur
    (13) expr -> . expr - produit
    (14) expr -> . expr + produit
    (15) expr -> . produit
    (8) produit -> . produit % facteur
    (9) produit -> . produit / facteur
    (10) produit -> . produit * facteur
    (11) produit -> . facteur
    (6) facteur -> . ENTIER
    (7) facteur -> . ( expr )
    -               shift and go to state 10
    ENTIER          shift and go to state 13
    (               shift and go to state 8

    expr                           shift and go to state 14
    facteur                        shift and go to state 11
    produit                        shift and go to state 12

state 9

    (5) ecrire -> ECRIRE ( expr . ) ;
    (13) expr -> expr . - produit
    (14) expr -> expr . + produit
    )               shift and go to state 15
    -               shift and go to state 16
    +               shift and go to state 17


state 10

    (12) expr -> - . facteur
    (6) facteur -> . ENTIER
    (7) facteur -> . ( expr )
    ENTIER          shift and go to state 13
    (               shift and go to state 8

    facteur                        shift and go to state 18

state 11

    (11) produit -> facteur .
    %               reduce using rule 11 (produit -> facteur .)
    /               reduce using rule 11 (produit -> facteur .)
    *               reduce using rule 11 (produit -> facteur .)
    )               reduce using rule 11 (produit -> facteur .)
    -               reduce using rule 11 (produit -> facteur .)
    +               reduce using rule 11 (produit -> facteur .)


state 12

    (15) expr -> produit .
    (8) produit -> produit . % facteur
    (9) produit -> produit . / facteur
    (10) produit -> produit . * facteur
    )               reduce using rule 15 (expr -> produit .)
    -               reduce using rule 15 (expr -> produit .)
    +               reduce using rule 15 (expr -> produit .)
    %               shift and go to state 19
    /               shift and go to state 20
    *               shift and go to state 21


state 13

    (6) facteur -> ENTIER .
    %               reduce using rule 6 (facteur -> ENTIER .)
    /               reduce using rule 6 (facteur -> ENTIER .)
    *               reduce using rule 6 (facteur -> ENTIER .)
    )               reduce using rule 6 (facteur -> ENTIER .)
    -               reduce using rule 6 (facteur -> ENTIER .)
    +               reduce using rule 6 (facteur -> ENTIER .)


state 14

    (7) facteur -> ( expr . )
    (13) expr -> expr . - produit
    (14) expr -> expr . + produit
    )               shift and go to state 22
    -               shift and go to state 16
    +               shift and go to state 17


state 15

    (5) ecrire -> ECRIRE ( expr ) . ;
    ;               shift and go to state 23


state 16

    (13) expr -> expr - . produit
    (8) produit -> . produit % facteur
    (9) produit -> . produit / facteur
    (10) produit -> . produit * facteur
    (11) produit -> . facteur
    (6) facteur -> . ENTIER
    (7) facteur -> . ( expr )
    ENTIER          shift and go to state 13
    (               shift and go to state 8

    produit                        shift and go to state 24
    facteur                        shift and go to state 11

state 17

    (14) expr -> expr + . produit
    (8) produit -> . produit % facteur
    (9) produit -> . produit / facteur
    (10) produit -> . produit * facteur
    (11) produit -> . facteur
    (6) facteur -> . ENTIER
    (7) facteur -> . ( expr )
    ENTIER          shift and go to state 13
    (               shift and go to state 8

    produit                        shift and go to state 25
    facteur                        shift and go to state 11

state 18

    (12) expr -> - facteur .
    )               reduce using rule 12 (expr -> - facteur .)
    -               reduce using rule 12 (expr -> - facteur .)
    +               reduce using rule 12 (expr -> - facteur .)


state 19

    (8) produit -> produit % . facteur
    (6) facteur -> . ENTIER
    (7) facteur -> . ( expr )
    ENTIER          shift and go to state 13
    (               shift and go to state 8

    facteur                        shift and go to state 26

state 20

    (9) produit -> produit / . facteur
    (6) facteur -> . ENTIER
    (7) facteur -> . ( expr )
    ENTIER          shift and go to state 13
    (               shift and go to state 8

    facteur                        shift and go to state 27

state 21

    (10) produit -> produit * . facteur
    (6) facteur -> . ENTIER
    (7) facteur -> . ( expr )
    ENTIER          shift and go to state 13
    (               shift and go to state 8

    facteur                        shift and go to state 28

state 22

    (7) facteur -> ( expr ) .
    %               reduce using rule 7 (facteur -> ( expr ) .)
    /               reduce using rule 7 (facteur -> ( expr ) .)
    *               reduce using rule 7 (facteur -> ( expr ) .)
    )               reduce using rule 7 (facteur -> ( expr ) .)
    -               reduce using rule 7 (facteur -> ( expr ) .)
    +               reduce using rule 7 (facteur -> ( expr ) .)


state 23

    (5) ecrire -> ECRIRE ( expr ) ; .
    ECRIRE          reduce using rule 5 (ecrire -> ECRIRE ( expr ) ; .)
    $end            reduce using rule 5 (ecrire -> ECRIRE ( expr ) ; .)


state 24

    (13) expr -> expr - produit .
    (8) produit -> produit . % facteur
    (9) produit -> produit . / facteur
    (10) produit -> produit . * facteur
    )               reduce using rule 13 (expr -> expr - produit .)
    -               reduce using rule 13 (expr -> expr - produit .)
    +               reduce using rule 13 (expr -> expr - produit .)
    %               shift and go to state 19
    /               shift and go to state 20
    *               shift and go to state 21


state 25

    (14) expr -> expr + produit .
    (8) produit -> produit . % facteur
    (9) produit -> produit . / facteur
    (10) produit -> produit . * facteur
    )               reduce using rule 14 (expr -> expr + produit .)
    -               reduce using rule 14 (expr -> expr + produit .)
    +               reduce using rule 14 (expr -> expr + produit .)
    %               shift and go to state 19
    /               shift and go to state 20
    *               shift and go to state 21


state 26

    (8) produit -> produit % facteur .
    %               reduce using rule 8 (produit -> produit % facteur .)
    /               reduce using rule 8 (produit -> produit % facteur .)
    *               reduce using rule 8 (produit -> produit % facteur .)
    )               reduce using rule 8 (produit -> produit % facteur .)
    -               reduce using rule 8 (produit -> produit % facteur .)
    +               reduce using rule 8 (produit -> produit % facteur .)


state 27

    (9) produit -> produit / facteur .
    %               reduce using rule 9 (produit -> produit / facteur .)
    /               reduce using rule 9 (produit -> produit / facteur .)
    *               reduce using rule 9 (produit -> produit / facteur .)
    )               reduce using rule 9 (produit -> produit / facteur .)
    -               reduce using rule 9 (produit -> produit / facteur .)
    +               reduce using rule 9 (produit -> produit / facteur .)


state 28

    (10) produit -> produit * facteur .
    %               reduce using rule 10 (produit -> produit * facteur .)
    /               reduce using rule 10 (produit -> produit * facteur .)
    *               reduce using rule 10 (produit -> produit * facteur .)
    )               reduce using rule 10 (produit -> produit * facteur .)
    -               reduce using rule 10 (produit -> produit * facteur .)
    +               reduce using rule 10 (produit -> produit * facteur .)
